[gd_scene load_steps=4 format=3 uid="uid://dvigx2ip6rql5"]

[ext_resource type="Script" uid="uid://dc6m8076pv7qx" path="res://Scenes/Enemy/enemy_tall_boy.gd" id="1_v4xqs"]
[ext_resource type="Texture2D" uid="uid://bnxxqu80qqu0o" path="res://Assets/tall_boy.png" id="2_l6uup"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v4xqs"]
height = 62.0

[node name="enemy_tall_boy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_v4xqs")
contactDamage = 4
speed = 180.0
separation_distance = 200.0
follow_distance = 260.0
follow_deadzone = 80.0
health = 4.0
downTime = 5

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_l6uup")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_v4xqs")

[node name="downTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
